@@ -16,24 +16,25 @@ class NavigatorTest {
     var navigation =
         new Navigator(
             challengeDefinitionsConfiguration.challenges(),
-            challengeDefinitionsConfiguration.challenges().getFirst());
+            challengeDefinitionsConfiguration.challenges().get(0));
 
     assertThat(navigation.previous()).isEmpty();
   }
 
   @Test
   void navigateNextWhenOnLastChallenge() {
+    var challenges = challengeDefinitionsConfiguration.challenges();
     var navigation =
         new Navigator(
-            challengeDefinitionsConfiguration.challenges(),
-            challengeDefinitionsConfiguration.challenges().getLast());
+            challenges,
+            challenges.get(challenges.size() - 1));
 
     assertThat(navigation.next()).isEmpty();
   }
 
   @Test
   void navigatePreviousAndNextOnSecondChallenge() {
-    var first = challengeDefinitionsConfiguration.challenges().getFirst();
+    var first = challengeDefinitionsConfiguration.challenges().get(0);
     var second = challengeDefinitionsConfiguration.challenges().get(1);
     var third = challengeDefinitionsConfiguration.challenges().get(2);
 
